--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "admin-lte": "^2.4.15",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "luxon": "^1.17.2",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-datetime": "^1.0.0-beta.10",
