--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-datetime": "^1.0.0-beta.10",
     "vue-input-mask": "0.0.10",
     "vue-router": "^3.0.3",
